--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /WiredBrainCoffee.DataAccess/obj/Debug/net6.0/refint/WiredBrainCoffee.DataAccess.dll
 /WiredBrainCoffee.DataAccess/obj/Debug/net6.0/WiredBrainCoffee.DataAccess.dll
 /WiredBrainCoffee.DataAccess/obj/Debug/net6.0/WiredBrainCoffee.DataAccess.pdb
+bin/ 	# ignore bin directory 
+*.obj 	# ignore any files with .obj postfix 
+!.gitignore 
+/.gitignore
